added API documentation for General, Admin, Customer
